kubernetes/02-apps/sonarr/service.yaml
# kubernetes/02-apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: homelab
  labels:
    app.kubernetes.io/name: sonarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sonarr # Debe coincidir con las etiquetas del Pod
  ports:
    - name: http
      port: 8989 # Puerto por el que el Service escucha dentro del clúster
      targetPort: http # Nombre del puerto en el Deployment (o el número 8989)
      protocol: TCP
