kubernetes/02-apps/sonarr/ingress.yaml
# kubernetes/02-apps/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: homelab
  labels:
    app.kubernetes.io/name: sonarr
  # annotations: # Eliminada anotación middleware y kubernetes.io/ingress.class
spec:
  ingressClassName: traefik # Añadido/Corregido
  rules:
    - host: sonarr.homelab.local 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr 
                port:
                  name: http # O number: 8989
# --- # Eliminada la definición del Middleware
